<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_small"
        />

    <TextView
        android:id="@+id/messages_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:text="@string/messages_label"/>

    <Spinner
        android:id="@+id/messages"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@id/messages_label"
        android:text="Message"/>

    <TextView
        android:id="@+id/type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_label"
        android:layout_below="@id/messages"/>

    <RadioGroup
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioWhatsapp"
        android:layout_below="@id/type_label">

        <RadioButton
            android:id="@+id/radioWhatsapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="messageTypeSelected"
            android:text="Whatsapp"/>

        <RadioButton
            android:id="@+id/radioEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="messageTypeSelected"
            android:text="Email"/>

        <RadioButton
            android:id="@+id/radioSMS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="messageTypeSelected"
            android:text="SMS"/>

    </RadioGroup>

    <TextView
        android:id="@+id/contacts_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_label"
        android:layout_below="@id/type"/>

    <Button
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:layout_alignParentRight="true"
        android:layout_below="@id/contacts_label"
        android:onClick="loadContats"/>


    <EditText
        android:id="@+id/number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_toLeftOf="@id/contacts"
        android:layout_below="@id/contacts_label"
        android:hint="+551199999999"
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/sendButton"
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:layout_alignParentRight="true"
        android:layout_below="@id/number"
        android:text="@string/send_button"
        android:background="#4b2e83"
        />
</RelativeLayout>
